--- a/examples/layout/mflowlayoutpolicy/mflowlayoutpolicy.dox
+++ b/examples/layout/mflowlayoutpolicy/mflowlayoutpolicy.dox
@@ -3,7 +3,7 @@
 
 Source code for a simple example of DuiFlowLayoutPolicy.
 
-\image html mflowlayoutpolicy.png
+\image html mflowlayoutpolicy.jpg
 
 \include examples/layout/mflowlayoutpolicy/mflowlayoutpolicy.cpp
 
