--- a/examples/layout/mfreestylelayoutpolicy/mfreestylelayoutpolicy.dox
+++ b/examples/layout/mfreestylelayoutpolicy/mfreestylelayoutpolicy.dox
@@ -3,7 +3,7 @@
 
 Source code for a simple example of DuiFreestyleLayoutPolicy.
 
-\image html mfreestylelayoutpolicy.png
+\image html mfreestylelayoutpolicy.jpg
 
 \include examples/layout/mfreestylelayoutpolicy/mfreestylelayoutpolicy.cpp
 
