--- a/examples/layout/mgridlayoutpolicy/mgridlayoutpolicy.dox
+++ b/examples/layout/mgridlayoutpolicy/mgridlayoutpolicy.dox
@@ -3,7 +3,7 @@
 
 Source code for a simple example of DuiGridLayoutPolicy.
 
-\image html mgridlayoutpolicy.png
+\image html mgridlayoutpolicy.jpg
 
 \include examples/layout/mgridlayoutpolicy/mgridlayoutpolicy.cpp
 
