--- a/examples/layout/mlinearlayoutpolicy/mlinearlayoutpolicy.dox
+++ b/examples/layout/mlinearlayoutpolicy/mlinearlayoutpolicy.dox
@@ -3,7 +3,7 @@
 
 Source code for a simple example of DuiLinearLayoutPolicy.
 
-\image html mlinearlayoutpolicy.png
+\image html mlinearlayoutpolicy.jpg
 
 \include examples/layout/mlinearlayoutpolicy/mlinearlayoutpolicy.cpp
 
