--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,8 @@
-libmeegotouch (0.20.35~1) unstable; urgency=low
+libmeegotouch (0.20.35-1) unstable; urgency=low
 
+  * Fixes: NB#182160 - Activity in non-visible/background applications when there are notifications on screen
+  * Fixes: NB#180677 - Delete MLocale etc when MApplication is deleted
+  * Fixes: NB#182223 - Screen orientation changes when sliding physical keyboard open - close
   * Fixes: NB#183344 - System dialog has wrong label in switcher
   * Fixes: NB#185045 - setItemStyle() is not working for MDetailedListItem
   * Fixes: NB#185277 - MLinearLayoutPolicyPrivate::notifyAllWidgetsOfLayoutPosition() only takes in consideration one policy for a button group
