--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+libmeegotouch (0.20.34.2-1) unstable; urgency=low
+
+  * Fixes: NB#185085 - Messaging UI crashes when trying to create new message
+  * Fixes: NB#185077 - Calculator is crashing when opened
+
+ -- Jorgen Scheibengruber <jorgen.scheibengruber@nokia.com>  Wed, 18 Aug 2010 14:19:31 +0300
+
 libmeegotouch (0.20.34.1-1) unstable; urgency=low
 
   * Fixes: NB#185041 - QtStyle Dialog and Example apps crashing when opened
