--- a/doc/src/launcher.dox
+++ b/doc/src/launcher.dox
@@ -81,54 +81,39 @@ of dynamic export table it is encouraged to hide the unnecessary
 symbols from the resulting binary by using \c -fvisibility=hidden and
 \c -fvisibility-inlines-hidden flags in compilation as well.
 
-\subsection pkgconfig Obtaining Flags with pkg-config
-
-The package \c applauncherd-dev provides the necessary files for
-\c pkg-config to get the appropriate compiler and linker flags.
-To get the compiler flags, use
-
-\code
-pkg-config --cflags meegotouch-boostable
-\endcode
-
-and to get the linker flags use
-
-\code
-pkg-config --libs meegotouch-boostable
-\endcode
-
-See below how to use pkg-config with QMake and CMake.
-
 \subsection qmaketips Building with QMake
 
-Once you have installed the \c applauncherd-dev package,
-adding the following lines in the .pro file will provide
-the compiler and the linker the necessary flags:
+\subsubsection qmakepreferred The preferred way
 
-\code
-QMAKE_CXXFLAGS += `pkg-config --cflags meegotouch-boostable`
-QMAKE_LFLAGS += `pkg-config --libs meegotouch-boostable`
-\endcode
-
-If \c applauncherd-dev is not installed, \c pkg-config will
-complain when you run \c make.
-
-Alternatively, you can use the QMake configuration option \c
-meegotouch-boostable (also provided in \c applauncherd-dev) and add
-the following line in the .pro file:
+Once you have installed the \c libmeegotouch-dev package,
+you can simply use QMake configuration option \c meegotouch-boostable:
 
 \code
 CONFIG += meegotouch-boostable
 \endcode
 
 This tells qmake to use the \c meegotouch-boostable feature, which
-ultimately uses \c pkg-config for the flags. Unfortunately qmake does
-not complain if you add the line but have not installed \c
-applauncherd-dev, so if the QMake magic does not seem to work, double
-check that the package is indeed installed.
- 
-As a last resort, you can manually define the following variables in
-the .pro file:
+includes the \c meegotouch feature and ultimately uses \c pkg-config for the
+flags. Unfortunately qmake does not complain if you add the line but
+have not installed \c libmeegotouch-dev, so if the QMake magic does
+not seem to work, double check that the package is indeed installed.
+
+\subsubsection qmakeother The pkg-config way
+
+You can also use \c pkg-config to get the correct flags:
+
+\code
+QMAKE_CXXFLAGS += `pkg-config --cflags meegotouch-boostable`
+QMAKE_LFLAGS += `pkg-config --libs meegotouch-boostable`
+\endcode
+
+If \c libmeegotouch-dev is not installed, \c pkg-config will
+complain when you run \c make.
+
+\subsubsection qmakelastresort The last resort
+
+It's also possible to manually define the following variables
+in the .pro file:
 
 \code
   QMAKE_CXXFLAGS += -fPIC -fvisibility=hidden -fvisibility-inlines-hidden
@@ -170,6 +155,22 @@ compiler and linker flags like this:
 \endcode  
 
 Again, this requires you to update the flags if something changes.
+
+\subsection pkgconfig Obtaining Flags with pkg-config
+
+The package \c libmeegotouch-dev provides the necessary files for
+\c pkg-config to get the appropriate compiler and linker flags.
+To get the compiler flags, use
+
+\code
+pkg-config --cflags meegotouch-boostable
+\endcode
+
+and to get the linker flags use
+
+\code
+pkg-config --libs meegotouch-boostable
+\endcode
 
 \section running Running boosted application
 
