New: MButtonStyle - iconId and toggledIconId
RevBy: Dominik Kapusta, Ville Voutilainen
Details: The iconID and toggledIconID of an MButton can now be specified also
via style. Their values in the model (when given) override their values
in the style.

--- a/doc/src/news.dox
+++ b/doc/src/news.dox
@@ -1,5 +1,11 @@
 /*! \page news What's New in MeeGo Touch
 
+\section v02038 0.20.38
+
+\subsection New
+- You can now specify the icon ids of an MButton also via its CSS style.
+  See MButtonStyle::toggledIconId and MButtonStyle::iconId.
+
 \section v02037 0.20.37
 
 \subsection New
