New: Add themeIsChanging signal to MTheme
RevBy: Caio Marcelo de Oliveira Filho <caio.oliveira@openbossa.org>,
       Michael Hasselmann, Armin Berres
Details: MR#357
Allows for custom applications and 3rd party libraries that use
only selected parts of MeegoTouch Framework to release resources
(pixmaps and ScalableImages) before they become invalid when the
theme change is completed.

The signal previously available (themeChangeCompleted) is too
late in that sense since pixmaps have already been free'd when
it is emitted.

--- a/doc/src/news.dox
+++ b/doc/src/news.dox
@@ -13,6 +13,7 @@
 - Updated \subpage rotation document.
 - You can now simulate the multitouch pinch gesture by holding down the Ctrl key, then pressing and dragging with the left mouse button.
 - MSceneWindow::appear(QGraphicsScene *scene, MSceneWindow::DeletionPolicy policy);
+- MTheme::themeIsChanging() signal is emitted to alert 3rd party libraries it's time to release theme resources before they are deleted.
 
 \subsection Deprecated
 - MSceneWindow::appear(MSceneWindow::DeletionPolicy policy). Use appear(QGraphicsScene*) or
