New: Style name can be set through setStyleName instead of setObjectName.
RevBy: Tomas Junnonen

Details: The object name can be different from the style name of the
widget. And object name can be used for testing purposes.
In case the style name is null, currently not to break the behavior
the fallback of object name shall be used.

--- a/doc/src/news.dox
+++ b/doc/src/news.dox
@@ -1,5 +1,13 @@
 /*! \page news What's New in MeeGo Touch
 
+\section v02037 0.20.37
+
+\subsection New
+- MWidgetController::setStyleName can now be used for associating a style with a widget (like setObjectName)
+
+\subsection Deprecated
+- MWindow::setObjectName and MWidgetController:setObjectname overloaded methods, use MWidgetController::setStyleName instead.
+
 \section v02036 0.20.36
 
 \subsection New
