Changes: Doxygen syntax fixes
RevBy: TrustMe
Details: Fix incorrect doxygen tag usage.

--- a/examples/layout/layout_inside_layout/layout_inside_layout.dox
+++ b/examples/layout/layout_inside_layout/layout_inside_layout.dox
@@ -1,9 +1,9 @@
 /**
-\page layout-inside-layout Hiding a QGraphicsLayout or DuiLayout
+\page layout-inside-layout Hiding a QGraphicsLayout or MLayout
 
-Source code for a simple example showing how do hide a DuiLayout or QGraphicsLayout.
+Source code for a simple example showing how do hide a MLayout or QGraphicsLayout.
 
-A DuiLayout or QGraphicsLayout should always be attached to QGraphicsWidget (or DuiWidget) or inside another layout.
+A MLayout or QGraphicsLayout should always be attached to QGraphicsWidget (or MWidget) or inside another layout.
 If you place a layout inside of another layout, the inner layout cannot be hidden, because a layout by
 itself cannot be hidden (There is no hide() function in QGraphicsLayout).  Likewise if you remove the inner layout,
 it will remain visible because it needs to be attached to something.
@@ -17,12 +17,12 @@ a QGraphicsWidget, then place that QGraphicsWidget inside of the outer layout.  
 \image html layout_inside_layout_portrait.png
 
 Source code of layout_inside_layout.cpp:
-\include examples/layout_inside_layout/layout_inside_layout.cpp
+\include layout_inside_layout/layout_inside_layout.cpp
 
 Styled with the following layout_inside_layout.css file:
-\include examples/layout_inside_layout/layout_inside_layout.css
+\include layout_inside_layout/layout_inside_layout.css
 
 And compiled with the following layout_inside_layout.pro file:
-\include examples/layout_inside_layout/layout_inside_layout.pro
+\include layout_inside_layout/layout_inside_layout.pro
 
 */
